--- a/teams/team-riker/dev/templates/karpenter.yaml
+++ b/teams/team-riker/dev/templates/karpenter.yaml
@@ -7,9 +7,7 @@ metadata:
     {{- toYaml .Values.labels | nindent 4 }}  
 spec:
   instanceProfile: '{{ .Values.spec.karpenterInstanceProfile }}'
-  subnetSelector:kubectl scale deployment -n team-riker skiapp-deployment --replicas 6
-
-
+  subnetSelector:
     kubernetes.io/cluster/{{ .Values.spec.clusterName }}: '*'
     kubernetes.io/role/internal-elb: '1' # to select only private subnets
   securityGroupSelector:
@@ -46,7 +44,7 @@ spec:
       values: ['amd64']
     - key: karpenter.sh/capacity-type
       operator: In
-      values: ['on-demand','spot']
+      values: ['on-demand', 'spot']
     - key: kubernetes.io/os
       operator: In
       values:
